[package]
name = "wsjtxrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_derive = '1.0.193'
byteorder = '1.5.0'
serde_json = '1.0.108'
chrono = '0.4.31'
colored = '2.1.0'
maidenhead = "0.1.0"
reverse_geocoder = "4.0.0"
iso3166-1 = "1.0.1"
ratatui = "0.25.0"
crossterm = "0.27.0"
anyhow = "1.0.77"
color-eyre = "0.6.2"
simplelog = "0.12.1"
log = "0.4.20"

# [profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*


